# spark

./: .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml
.github/workflows/: release.yml
examples/: README.md
examples/breach-triage/: README.md  demo.py
examples/sql-callable/: README.md  demo.py
examples/streaming/: README.md  demo.py
src/rulebricks_spark/: __init__.py  _config.py  _partition.py  _schema.py  _version.py  databricks.py  exceptions.py  solve.py
tests/: conftest.py  test_coerce.py  test_integration.py  test_register_udf_args.py  test_schema.py  test_solve_args.py
